[package]
name = "leetcode_test"
version = "0.1.0"
authors = ["Aloxaf <bailong104@gmail.com>"]
description = "Some useful macros and definition for exercising in leetcode"
homepage = "https://github.com/Aloxaf/leetcode_prelude"
repository = "https://github.com/Aloxaf/leetcode_prelude"
readme = "README.md"
keywords = ["proc_macro"]
license = "MIT"
edition = "2018"

[dependencies]
serde_json = "1.0"

[lib]
proc-macro = true
